Add autoplay playlist hero

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body data-page="upcoming">
-    <header class="hero">
-      <video class="hero__video" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1511379938547-c1f69419868d?auto=format&fit=crop&w=1600&q=80">
-        <source
-          src="https://storage.coverr.co/videos/coverr-concert-lights-3458/1080p.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <div class="hero__overlay"></div>
+    <header class="playlist-hero">
+      <iframe
+        class="playlist-hero__video"
+        src="https://www.youtube.com/embed?list=PL6JcMPfFFmjeqdlKNvtzu6kum2bX6OoXs&autoplay=1&mute=1&playsinline=1&loop=1&playlist=PL6JcMPfFFmjeqdlKNvtzu6kum2bX6OoXs&rel=0"
+        title="Red Karma 13 video playlist"
+        allow="autoplay; encrypted-media; picture-in-picture"
+        allowfullscreen
+      ></iframe>
       <nav class="nav">
         <a class="nav__logo" href="index.html">Red Karma 13</a>
         <div class="nav__links">
@@ -23,6 +23,16 @@
           <a href="#connect">Connect</a>
         </div>
       </nav>
+    </header>
+
+    <header class="hero">
+      <video class="hero__video" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1511379938547-c1f69419868d?auto=format&fit=crop&w=1600&q=80">
+        <source
+          src="https://storage.coverr.co/videos/coverr-concert-lights-3458/1080p.mp4"
+          type="video/mp4"
+        />
+      </video>
+      <div class="hero__overlay"></div>
       <div class="hero__content">
         <p class="hero__tag">Modern Psychedelic Rock</p>
         <h1>Red Karma 13</h1>
