Adjust playlist hero header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body data-page="upcoming">
     <header class="playlist-hero">
+      <div class="playlist-hero__title">Red Karma</div>
       <iframe
         class="playlist-hero__video"
         src="https://www.youtube.com/embed?list=PL6JcMPfFFmjeqdlKNvtzu6kum2bX6OoXs&autoplay=1&mute=1&playsinline=1&loop=1&playlist=PL6JcMPfFFmjeqdlKNvtzu6kum2bX6OoXs&rel=0"
@@ -15,7 +16,7 @@
         allow="autoplay; encrypted-media; picture-in-picture"
         allowfullscreen
       ></iframe>
-      <nav class="nav">
+      <nav class="nav playlist-hero__nav">
         <a class="nav__logo" href="index.html">Red Karma 13</a>
         <div class="nav__links">
           <a href="#bio">Bio</a>
